--- a/portal/templates/users/admin_user_list.html
+++ b/portal/templates/users/admin_user_list.html
@@ -14,18 +14,8 @@
     </nav>
   </div>
   <section class="section profile">
-    <div class="row d-flex  flex-lg-row flex-column">
-      <div class="col-lg-4 col-md-12">
-        <div class="card">
-          <div class="card-body"><h5 class="card-title">Фильтры и
-            сортировка</h5>
-            <form method="get">
-              {% include 'users/forms/user_search_form.html' %}
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-8 col-md-12">
+    <div class="row">
+    <div class="col-lg-12 col-md-12">
         <div class="card profile-list-card mb-3">
           <div class="card-body d-flex flex-row row">
           <div class="table-responsive">
@@ -65,7 +55,20 @@
           {% include 'inc/_pagination.html' %}
         </div>
       </div>
+  </div>
+    <div class="row">
+      <div class="col-lg-4 col-md-12">
+        <div class="card">
+          <div class="card-body"><h5 class="card-title">Фильтры и
+            сортировка</h5>
+            <form method="get">
+              {% include 'users/forms/user_search_form.html' %}
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
+
   </section>
 {% endblock %}
 
