--- a/portal/templates/docs/admin_category_list.html
+++ b/portal/templates/docs/admin_category_list.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <div class="pagetitle">
-    <h1>Управление группами</h1>
+    <h1>Управление категориями документов</h1>
     <nav>
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{% url 'main:home_page' %}"><i
