--- a/portal/templates/authapp/email_verification.html
+++ b/portal/templates/authapp/email_verification.html
@@ -4,7 +4,7 @@
 {% block page_title %}Подтведите Email{% endblock %}
 {% block unreg_content %}
   <div class="col-12">
-  <p>На вашу почту {{ user_email }} было отправлено письмо со ссылкой. Перейдите по ней для подтверждения вашего Email-адреса. Не забудьте проверить папку "Спам", оно могло попасть туда</p>
+  <p>На вашу почту {{ user_email }} было отправлено письмо со ссылкой. Перейдите по ней для подтверждения вашего Email-адреса. <strong>Не забудьте проверить папку "Спам", оно могло попасть туда</strong></p>
   <p>Если письмо не пришло, нажмите на кнопку чтобы отправить его повторно</p>
   <div class="col-12">
     <button class="btn btn-outline-primary w-100" id="btnResend" data-email="{{ user_email }}">Отправить повторно</button>
