--- a/portal/templates/authapp/password_reset_done.html
+++ b/portal/templates/authapp/password_reset_done.html
@@ -7,6 +7,6 @@
   <div class="col-12">
   <p>Проверьте почтовый ящик</p>
     <p>Проверьте свою почту, вам должно прийти письмо со ссылкой для
-            восстановления пароля. Если письма нет, проверьте папку "Спам".</p>
+            восстановления пароля. <strong>Если письма нет, проверьте папку "Спам".</strong></p>
   </div>
 {% endblock %}
