--- a/portal/templates/docs/doc_detail.html
+++ b/portal/templates/docs/doc_detail.html
@@ -113,8 +113,7 @@
         </div>
         <div class="modal-body">
           <iframe
-              src="{% static 'vendor/pdfjs/web/viewer.html' %}
-                ?file={{ protocol }}://{{ domain }}{{ doc.file.url }}&zoom=page-fit"
+              src="{% static 'vendor/pdfjs/web/viewer.html' %}?file={{ protocol }}://{{ domain }}{{ doc.file.url }}&zoom=page-fit"
               id="file-pdf"
               style="width:100%;
                      height:100%;
@@ -186,10 +185,7 @@
         }
     </script>
   {% elif extention in 'JPG, JPEG, PNG, BMP' %}
-    <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css" />
     <script type="module">
         import {Fancybox} from "https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.esm.js";
     </script>
@@ -211,13 +207,10 @@
                       success: function (response) {
                           console.log(response)
                           $('.btn-signing').removeClass('btn-primary')
-                              .addClass('btn-success').attr('disabled',
-                              true).text('Успешно подписано')
+                              .addClass('btn-success').attr('disabled', true).text('Успешно подписано')
                           $('#docStatus').removeClass('alert-warning')
-                              .addClass('alert-info').text('Вы подписали ' +
-                              'этот документ')
-                          showToast('text-bg-success', 'Успешно', 'Вы ' +
-                              'подписали документ')
+                              .addClass('alert-info').text('Вы подписали этот документ')
+                          showToast('text-bg-success', 'Успешно', 'Вы подписали документ')
                       },
                       error: function (response) {
                           console.log(response)
