--- a/portal/templates/inc/_aside.html
+++ b/portal/templates/inc/_aside.html
@@ -63,13 +63,13 @@
 
   <li class="nav-item">
     <a class="nav-link collapsed" href="{% url 'docs:doc_list' %}">
-      <i class="bi bi-question-circle"></i>
+      <i class="bi bi-files"></i>
       <span>Документы</span>
     </a>
   </li>
   <li class="nav-item">
     <a class="nav-link collapsed" href="{% url 'posts:post_list' %}">
-      <i class="bi bi-question-circle"></i>
+      <i class="bi bi-newspaper"></i>
       <span>Новости</span>
     </a>
   </li>
